compiler/testData/asJava/lightClasses/compilationErrors/LocalInAnnotation.kt
// Validation
// ALLOW_FRONTEND_EXCEPTION
// See KT-24323
// FIR_COMPARISON

@Retention(AnnotationRetention.RUNTIME /* ) was removed */
                   annotation class Validation()

